crates/ide/src/handlers/snapshots/ide__handlers__hover__tests__bang_operator.snap
---
source: crates/ide/src/handlers/hover.rs
assertion_line: 175
expression: "check(\"defvar a = !add$(1, 2);\")"
---
Hover {
    signature: "!add(a, b, ...)",
    document: Some(
        "This operator adds *a*, *b*, etc., and produces the sum.",
    ),
}
