crates/ide/src/handlers/snapshots/ide__handlers__hover__tests__doc_comment-2.snap
---
source: crates/ide/src/handlers/hover.rs
expression: "check(r#\"\nclass Foo {\n    // doc comment\n    int $foo;\n}\n            \"#)"
---
Hover {
    signature: "int Foo::foo",
    document: Some(
        "doc comment",
    ),
}
