crates/ide/src/handlers/snapshots/ide__handlers__hover__tests__doc_comment-3.snap
---
source: crates/ide/src/handlers/hover.rs
expression: "check(r#\"\n// doc comment\ndef $foo;\n            \"#)"
---
Hover {
    signature: "def foo",
    document: Some(
        "doc comment",
    ),
}
