crates/ide/src/handlers/snapshots/ide__handlers__hover__tests__doc_comment-4.snap
---
source: crates/ide/src/handlers/hover.rs
expression: "check(r#\"\n// doc comment\n\nclass $Foo;\n            \"#)"
---
Hover {
    signature: "class Foo",
    document: None,
}
