crates/ide/src/handlers/snapshots/ide__handlers__hover__tests__doc_comment.snap
---
source: crates/ide/src/handlers/hover.rs
expression: "check(r#\"\n// doc comment\nclass $Foo;\n            \"#)"
---
Hover {
    signature: "class Foo",
    document: Some(
        "doc comment",
    ),
}
