crates/ide/src/handlers/snapshots/ide__handlers__hover__tests__field.snap
---
source: crates/ide/src/handlers/hover.rs
expression: "check(\"class Foo { int $field1 = 1; }\")"
---
"int Foo::field1"
