crates/ide/src/handlers/snapshots/ide__handlers__hover__tests__template_arg.snap
---
source: crates/ide/src/handlers/hover.rs
expression: "check(\"class Foo<int $arg1>;\")"
---
"int arg1"
